# AMDMIGraphX

./: Migraphx.drawio  bla.py  get_inception_v3_onnx.py  get_retinanet_onnx.py  get_sr_a2n.py  get_sr_awsrn_bam.py  requirements.txt
.github/workflows/: README.md  backup_test.yml  backup_test_dummy.yaml  backup_test_pr.yaml  comparer.yaml  history.yaml  history_HTEC.yaml  performance-dummy.yaml  performance.yaml  performance_HTEC.yaml  preformance.yaml  preformance_HTEC.yaml  preformance_htec.yaml  results_between_dates.yaml  rocm-image-release_HTEC.yaml  rocm-image-release_HTEC_dj.yaml
onnx_update/: README.md  full_test_list.md  missing_test_list.md  test_result.txt
src/: CMakeLists.txt  eliminate_contiguous.cpp  instruction.cpp  make_op.cpp  module.cpp  normalize_attributes.cpp  normalize_ops.cpp  optimize_module.cpp  program.cpp  rewrite_pooling.cpp  rewrite_rnn.cpp  simplify_algebra.cpp  simplify_reshapes.cpp
src/onnx/: CMakeLists.txt  onnx_parser.cpp  padding.cpp  parse_binary_op.cpp  parse_bitwise_not.cpp  parse_castlike.cpp  parse_convolution.cpp  parse_depthtospace.cpp  parse_einsum.cpp  parse_einsum.cpp.bak  parse_isinf.cpp  parse_lstm.cpp  parse_mod.cpp  parse_pad.cpp  parse_qlinearconcat.cpp  parse_qlinearleakyrelu.cpp  parse_qlinearmul.cpp  parse_qlinearpooling.cpp  parse_qlinearsigmoid.cpp  parse_reduce_op.cpp  parse_reversesequence.cpp  parse_scan.cpp  parse_slice.cpp  parse_spacetodepth.cpp  parse_tile.cpp  pooling.cpp
src/op_builders/: CMakeLists.txt  binary_op_builder.cpp  einsum_builder.cpp  module_wrapper.cpp
src/op_builders/include/: builders.hpp  module_wrapper.hpp
src/tf/: parse_concat.cpp  parse_pack.cpp
test/: rewrite_pooling_test.cpp
test/onnx/: CMakeLists.txt  einsum_hadamard_product_test.onnx  einsum_ijkl_test.onnx  einsum_transpose_missing_output_test.onnx  gen_onnx.py  mlem.onnx  onnx_lstm_bi_layout_cell_test.onnx  onnx_lstm_bi_layout_last_test.onnx  onnx_lstm_f_layout_cell_test.onnx  onnx_lstm_f_layout_hs_test.onnx  onnx_lstm_r_layout_hs_cell_test.onnx  onnx_lstm_r_layout_test.onnx  onnx_rnn_test.cpp  onnx_test.cpp  (+5 more)
(+52 files in other folders)
